force-app/main/default/objects/Auto_Number__c/fields/Bike__c.field-meta.xml
<CustomField>
    <fullName>Bike__c</fullName>
    <label>Bike</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>