force-app/main/default/objects/Auto_Number__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <label>Car</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>