force-app/main/default/objects/Auto_Number__c/fields/Truck__c.field-meta.xml
<CustomField>
    <fullName>Truck__c</fullName>
    <label>Truck</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>